fixed image stretching

--- a/app/assets/stylesheets/canvasstylesheet.css
+++ b/app/assets/stylesheets/canvasstylesheet.css
@@ -1,6 +1,5 @@
 td img{
-	width:450px;
-	height:250px;
+	
 }
 
 table, td {
